--- a/src/CleanCode.PurchaseOrders.Application/CleanCode.PurchaseOrders.Application.csproj
+++ b/src/CleanCode.PurchaseOrders.Application/CleanCode.PurchaseOrders.Application.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0-rc.2.22472.3" />
+    <PackageReference Include="Scrutor" Version="4.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CleanCode.PurchaseOrders.Domain\CleanCode.PurchaseOrders.Domain.csproj" />
+    <ProjectReference Include="..\CleanCode.Shared\CleanCode.Shared.csproj" />
   </ItemGroup>
 
 </Project>
